--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "body-scroll-lock": "^4.0.0-beta.0",
+    "firebase": "^9.22.2",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.6",
     "swiper": "^9.3.2",
@@ -30,7 +31,8 @@
     "buffer": "^6.0.3",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
-    "posthtml-include": "^1.7.4"
+    "posthtml-include": "^1.7.4",
+    "process": "^0.11.10"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
 }
